# Rust_tool_testing

./: Cargo.toml  diff_barcode.fastq  new.fastq  problems_faced.md
src/: cli.rs  lib.rs  main.rs  test_cli.rs
