[package]
name = "NextLineTest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
structopt = "0.3.26"
time = "0.2"
csv = "1.3.0"


[dev-dependencies]
tempfile = "3.8.1"
needletail = "0.5.1"